// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Default 1`] = `
<span>
  <button
    class="svelte-6r5o0y"
  >
     
    <span>
      Default
    </span>
     
  </button>
  <!--&lt;Button&gt;-->
</span>
`;

exports[`Disabled 1`] = `
<span>
  <button
    class="svelte-6r5o0y"
    disabled=""
  >
     
    <span>
      Disabled
    </span>
     
  </button>
  <!--&lt;Button&gt;-->
</span>
`;

exports[`Icon only 1`] = `
<span>
  <button
    class="iconOnly svelte-6r5o0y"
  >
    <i
      class="material-icons svelte-6r5o0y"
    >
      face
    </i>
     
     
  </button>
  <!--&lt;Button&gt;-->
</span>
`;

exports[`Icon only, no color 1`] = `
<span>
  <button
    class="iconOnly noColor svelte-6r5o0y"
  >
    <i
      class="material-icons svelte-6r5o0y"
    >
      face
    </i>
     
     
  </button>
  <!--&lt;Button&gt;-->
</span>
`;

exports[`No color 1`] = `
<span>
  <button
    class="noColor svelte-6r5o0y"
  >
     
    <span>
      Text only
    </span>
     
  </button>
  <!--&lt;Button&gt;-->
</span>
`;

exports[`Primary 1`] = `
<span>
  <button
    class="primary svelte-6r5o0y"
  >
     
    <span>
      Primary
    </span>
     
  </button>
  <!--&lt;Button&gt;-->
</span>
`;

exports[`Primary disabled 1`] = `
<span>
  <button
    class="primary svelte-6r5o0y"
    disabled=""
  >
     
    <span>
      Primary
    </span>
     
  </button>
  <!--&lt;Button&gt;-->
</span>
`;

exports[`Primary with icon only 1`] = `
<span>
  <button
    class="primary iconOnly svelte-6r5o0y"
  >
    <i
      class="material-icons svelte-6r5o0y"
    >
      volume_up
    </i>
     
     
  </button>
  <!--&lt;Button&gt;-->
</span>
`;

exports[`Primary with icon only, no color 1`] = `
<span>
  <button
    class="primary iconOnly noColor svelte-6r5o0y"
  >
    <i
      class="material-icons svelte-6r5o0y"
    >
      volume_up
    </i>
     
     
  </button>
  <!--&lt;Button&gt;-->
</span>
`;

exports[`Primary with text and icon 1`] = `
<span>
  <button
    class="primary svelte-6r5o0y"
  >
    <i
      class="material-icons svelte-6r5o0y"
    >
      person
    </i>
     
    <span>
      Hey!
    </span>
     
  </button>
  <!--&lt;Button&gt;-->
</span>
`;

exports[`Text and icon 1`] = `
<span>
  <button
    class="svelte-6r5o0y"
  >
    <i
      class="material-icons svelte-6r5o0y"
    >
      face
    </i>
     
    <span>
      Hello
    </span>
     
  </button>
  <!--&lt;Button&gt;-->
</span>
`;
